<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/g3"
    android:scaleX="1.01"
    >

    <TextView
        android:id="@+id/imageView"
        android:layout_width="219dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="131dp"
        android:layout_marginTop="199dp"
        android:layout_marginEnd="82dp"
        android:contentDescription="@string/welcome"
        android:text="Welcome"
        android:textColor="@color/bluesystem"
        android:textColorHint="@color/bluesystem"
        android:textSize="35sp"
        android:textStyle="bold"
        app:srcCompat="@drawable/wlcome" />

    <TextView
        android:id="@+id/imageView2"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="253dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/email"
        android:text="Username"
        android:textColor="@color/bluesystem"
        android:textColorHint="@color/bluesystem"
        android:textSize="25sp"
        android:textStyle="bold"
        app:srcCompat="@drawable/em" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="-2dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="351dp"
        android:contentDescription="@string/cem"
        app:srcCompat="@drawable/g7"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="55dp"
        android:contentDescription="@string/logto"
        app:srcCompat="@drawable/logto"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_above="@+id/main_join_now_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="121dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#143998"
        android:text="@string/login" />

    <TextView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="261dp"
        android:contentDescription="@string/pass"
        android:text="Password"
        android:textColor="@color/bluesystem"
        android:textColorHint="@color/bluesystem"
        android:textSize="25sp"
        android:textStyle="bold"
        app:srcCompat="@drawable/pass" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-6dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="231dp"
        android:contentDescription="@string/cp"
        app:srcCompat="@drawable/g7"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView5"
        android:layout_alignTop="@+id/imageView5"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:labelFor="@id/login_password_input"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/inputname"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView3"
        android:layout_alignTop="@+id/imageView3"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:labelFor="@id/inputname"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/main_join_now_btn"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="85dp"
        android:backgroundTint="#99ffffff"
        android:onClick="valid"
        android:padding="20dp"
        android:text="@string/create_new_account"
        android:textAllCaps="false"
        android:textColor="@color/bluesystem"
        android:textSize="18sp" />


</RelativeLayout>