<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/g3"
    android:scaleX="1.01"
    >

    <TextView
        android:id="@+id/imageView"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="131dp"
        android:layout_marginTop="189dp"
        android:layout_marginEnd="116dp"
        android:contentDescription="@string/welcome"
        android:text="Welcome"
        android:textColor="#13497B"
        android:textColorHint="#13497B"
        android:textSize="35sp"
        android:textStyle="bold"
        app:srcCompat="@drawable/wlcome" />

    <TextView
        android:id="@+id/imageView2"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="1dp"
        android:contentDescription="@string/email"
        android:text="Username"
        android:textColor="#13497B"
        android:textColorHint="#13497B"
        android:textSize="25sp"
        android:textStyle="bold"
        app:srcCompat="@drawable/em" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="-2dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="351dp"
        android:contentDescription="@string/cem"
        app:srcCompat="@drawable/g7"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/logto"
        app:srcCompat="@drawable/logto"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="137dp"
        android:backgroundTint="#00D4CD"
        android:text="@string/login"
        android:textColor="#13497B"
        android:textColorLink="#13497B" />

    <TextView
        android:id="@+id/imageView7"
        android:layout_width="342dp"
        android:layout_height="45dp"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="9dp"
        android:contentDescription="@string/pass"
        android:text="Password"
        android:textColor="#13497B"
        android:textColorHint="#13497B"
        android:textSize="25sp"
        android:textStyle="bold"
        app:srcCompat="@drawable/pass" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="408dp"
        android:layout_height="108dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-2dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="196dp"
        android:contentDescription="@string/cp"
        app:srcCompat="@drawable/g7"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="292dp"
        android:layout_height="41dp"
        android:layout_alignStart="@+id/imageView5"
        android:layout_alignTop="@+id/imageView5"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="33dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:labelFor="@id/login_password_input"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/inputname"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView3"
        android:layout_alignTop="@+id/imageView3"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:labelFor="@id/inputname"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


</RelativeLayout>